refactor(security): 调整JWT认证授权配置
- 将authzProperties重命名为authcProperties以匹配认证配置
- 添加SecurityJwtAuthcProperties字段用于认证处理
- 更新构造函数中的属性注入顺序
- 将注释标记从/**改为/*用于批量参数设置说明
- 将Collectors.toList()替换为更简洁的List接口方法
- 使用Entry::getKey方法引用简化流处理
- 将路径模式从授权属性改为认证属性进行匹配